Update composer require

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^8.0",
+        "illuminate/support": "^8.0||^9.0",
+        "illuminate/http": "^8.0||^9.0",
+		"illuminate/database": "^8.0||^9.0",
         "raditzfarhan/realm-chat": "^1.0"
     },
     "require-dev": {
